# autokey2espanso

./: LICENSE  README.md  pyproject.toml
autokey2espanso/: cli.py
